--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "Learning React",
-  "main": "App.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -23,12 +22,13 @@
     "namaste-react": "file:",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^7.4.1"
   },
   "devDependencies": {
     "process": "^0.11.10"
   },
   "browserslist": [
-    "last 2 versions"
+    "last 5 versions"
   ]
 }
