--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hvrgupta/react#readme",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "browserslist": "^4.21.10",
     "namaste-react": "file:",
     "parcel": "^2.9.3",
@@ -26,7 +27,11 @@
     "react-router": "^7.4.1"
   },
   "devDependencies": {
-    "process": "^0.11.10"
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.5.3",
+    "process": "^0.11.10",
+    "tailwindcss": "^4.1.3"
   },
   "browserslist": [
     "last 5 versions"
