--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/hvrgupta/react#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.3",
     "browserslist": "^4.21.10",
     "namaste-react": "file:",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.4.1"
   },
   "devDependencies": {
